--- a/scss/layout/_banner.scss
+++ b/scss/layout/_banner.scss
@@ -115,7 +115,7 @@
               width: 60%;
               left: 50%;
               margin-left: -30%;
-              top: 20%;
+              top: 10%;
               background-color: #fff;
             }
 
@@ -160,6 +160,9 @@
               position: fixed;
               z-index: 995;
               top: 0;
+              left: 0;
+              right: 0;
+              bottom: 0;
               background-color: #000;
               opacity: 0.8;
               width: 100%;
@@ -176,8 +179,10 @@
         position: absolute;
         width: 100%;
         bottom: 0;
+        padding-bottom: 70px;
         background: #f9fafa;
         & .banner-partner {
+          overflow: hidden;
           padding: 12px 0;
           & .partner-text {
             text-align: center;
@@ -194,8 +199,9 @@
             }
           }
           & .partner-logo {
-            @include mid-flex();
             gap: 40px;
+            @include mid-flex();
+            animation: rightToLeft 10s linear infinite;
             img {
               width: auto;
             }
@@ -208,7 +214,7 @@
         }
         &-title {
           position: relative;
-          height: calc(100vh - 60px);
+          height: 100vh;
         }
       }
     }
@@ -217,7 +223,7 @@
     position: relative;
     &-img {
       position: relative;
-      padding-top: calc((780 / 1728) * 110%);
+      padding-top: calc((775 / 1728) * 110%);
       overflow: hidden;
       .img {
         animation: zoomout 3s linear;
