--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -93,11 +93,9 @@
       //   content: "\e906";
       // }
       .ic-down {
-        top: 0;
-        right: -35px;
-        padding: 8px;
+        top: 10px;
+        right: -20px;
         display: block;
-        height: 100%;
         position: absolute;
         @include max(1100px) {
           position: unset;
