--- a/scss/core/_animation.scss
+++ b/scss/core/_animation.scss
@@ -72,3 +72,8 @@
     transform: translateX(-1200px);
   }
 }
+
+@keyframes mover {
+  0% { transform: translateY(10px); }
+  100% { transform: translateY(-10px); }
+}
