--- a/scss/layout/_tab.scss
+++ b/scss/layout/_tab.scss
@@ -360,7 +360,7 @@
         }
         div.tablist-inner-body {
           width: 33.3333%;
-          height: 100%;
+          height: auto;
           @include max(1024px) {
             width: 50%;
           }
@@ -559,6 +559,7 @@
             background: #ffffff;
             border: 1px solid #d9d9d9;
             border-radius: 8px;
+            cursor: pointer;
           }
           > a.selected {
             color: #fff;
