--- a/css/style.css
+++ b/css/style.css
@@ -1760,7 +1760,7 @@ table {
 }
 
 .event {
-  background: linear-gradient(0deg, #ffffff 0%, #eef6ff 20%);
+  background: linear-gradient(180deg, #ffffff 0%, #eef6ff 20%);
 }
 .event-inner {
   padding: 1.875rem 0 3.4375rem 0;
@@ -2054,6 +2054,9 @@ table {
   }
 }
 
+.feedback-inner {
+  margin-top: 80px;
+}
 .feedback-inner-box {
   position: relative;
   margin-bottom: 100px;
