--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -209,38 +209,21 @@
             }
           }
         }
-        & .contact-rapcha {
-          padding: 25px;
-          padding-top: 0;
-          background: #fff;
-        }
         & .contact-send {
           padding: 25px;
           padding-top: 0;
           border-bottom-left-radius: 10px;
           border-bottom-right-radius: 10px;
           background: #fff;
-          > a {
+          a {
             width: 100%;
           }
-          > a > p {
+          p {
             padding: 10px 0;
             text-align: center;
             color: #fff;
             border-radius: 4px;
             background-color: $color-first;
-          }
-          > input {
-            padding: 12px 0;
-            text-align: center;
-            color: #fff;
-            border-radius: 4px;
-            background-color: #174ae6;
-            width: 100%;
-            outline: 0;
-            border: 0;
-            font-size: 18px;
-            cursor: pointer;
           }
         }
       }
