--- a/scss/layout/_customer.scss
+++ b/scss/layout/_customer.scss
@@ -6,19 +6,22 @@
     #ffffff 100%
   );
   &-inner {
-    padding: 100px 0;
+    margin: 100px 0;
     &-title {
       text-align: center;
-      margin-bottom: 50px;
+      margin-bottom: 40px;
       & h2 {
-        font-size: 36px;
-        padding-bottom: 25px;
+        font-size: 28px;
+        margin-bottom: 20px;
         text-transform: uppercase;
-        color: #184ae6;
+        color: #0060ff;
+        > span {
+          color: #002485;
+        }
         @include max(768px) {
           font-size: 28px;
         }
-        @include max(600px){
+        @include max(600px) {
           font-size: 20px;
         }
       }
@@ -31,13 +34,13 @@
         font-size: 24px;
         margin: auto;
         width: 65%;
-        @include max(1100px){
+        @include max(1100px) {
           width: 100%;
         }
         @include max(768px) {
           font-size: 18px;
         }
-        @include max(600px){
+        @include max(600px) {
           font-size: 16px;
         }
       }
@@ -47,45 +50,38 @@
       @include mid-flex-btw();
     }
     &-body {
-      border: 1px solid #f5f5f5;
       margin-bottom: 10px;
-      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      background: #fff;
+      border-radius: 12px;
+      border: 1px solid #f5f5f5;
       .customer-img {
-        img {
-          height: 220px;
-          border-top-left-radius: 10px;
-          border-top-right-radius: 10px;
-        }
+        margin-bottom: 20px;
       }
       .customer-content {
-        padding: 20px;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
+        width: 100%;
+        height: auto;
+        position: relative;
+        overflow: hidden;
         > p:nth-child(1) {
-          font-size: 20px;
-          padding-bottom: 15px;
-          line-height: 30px;
+          font-size: 16px;
+          margin-bottom: 15px;
+          line-height: 20px;
           font-weight: 600;
+          color: #1d3a89;
+          @include lc(2);
         }
         > p:nth-child(2) {
-          line-height: 28px;
-          padding-bottom: 30px;
+          color: #858585;
+          line-height: 18px;
+          margin-bottom: 15px;
+          @include lc(4);
         }
         &-button {
-          text-align: center;
           > a {
-            padding: 10px;
-            color: #fff;
+            font-size: 14px;
+            color: #1665d8;
             border-radius: 4px;
-          }
-          > a.btn-yellow {
-            background-color: $color-four;
-          }
-          > a.btn-darkblue {
-            background-color: $color-first;
-          }
-          > a.btn-green {
-            background-color: $color-five;
           }
         }
       }
