--- a/scss/layout/_content.scss
+++ b/scss/layout/_content.scss
@@ -313,18 +313,17 @@
 .dropdown {
   position: relative;
   .dropdown-list {
-    padding: 25px 20px;
+    padding: 25px 30px;
     background: #fff;
     position: absolute;
-    top: 50px;
+    top: 80px;
     left: 0;
     right: 0;
-    border: 1px solid rgba(black, 0.2);
-    max-height: 223px;
-    overflow-y: auto;
+    border: 1px solid #e8e8e8;
     background: #fff;
     display: none;
     z-index: 10;
+    border-radius: 4px;
   }
 
   .checkbox {
@@ -334,20 +333,23 @@
 
   .dropdown-label {
     display: block;
-    height: 44px;
+    height: 37px;
     font-size: 16px;
-    line-height: 42px;
     background: #fff;
-    border: 1px solid rgba(black, 0.2);
-    padding: 0 40px 0 20px;
     cursor: pointer;
     position: relative;
-
+    padding: 6px 14px;
+    border-radius: 4px;
+    margin-top: 8px;
+    border: 1px solid #e8e8e8;
+    @include lc(1);
     &:before {
-      content: "▼";
+      content: "\e905";
+      font-family: iconfont;
       position: absolute;
       right: 20px;
       top: 50%;
+      font-size: 8px;
       transform: translateY(-50%);
       transition: transform 0.25s;
       transform-origin: center center;
@@ -361,53 +363,51 @@
       transition: 2s opacity 2s;
       opacity: 1;
     }
-    .dropdown-label:before {
-      transform: translateY(-50%) rotate(-180deg);
-    }
   }
 }
 
 .checkbox {
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   &:last-child {
     margin-bottom: 0;
   }
-
   .checkbox-custom {
     display: none;
   }
-
   .checkbox-custom-label {
     display: inline-block;
     position: relative;
     vertical-align: middle;
     cursor: pointer;
   }
-
   .checkbox-custom + .checkbox-custom-label:before {
     content: "";
-    background: transparent;
     display: inline-block;
     vertical-align: middle;
     margin-right: 10px;
     text-align: center;
-    width: 12px;
-    height: 12px;
-    border: 1px solid rgba(black, 0.3);
+    width: 18px;
+    height: 18px;
+    border: 1px solid #787878;
     border-radius: 2px;
     margin-top: -2px;
+  }
+
+  .checkbox-custom:checked + .checkbox-custom-label:before {
+    content: "";
+    background-color: $color-first;
   }
 
   .checkbox-custom:checked + .checkbox-custom-label:after {
     content: "";
     position: absolute;
     top: 2px;
-    left: 4px;
+    left: 7px;
     height: 4px;
     padding: 2px;
     transform: rotate(45deg);
     text-align: center;
-    border: solid #000;
+    border: solid #fff;
     border-width: 0 2px 2px 0;
   }
   .checkbox-custom-label {
