--- a/scss/layout/_history.scss
+++ b/scss/layout/_history.scss
@@ -19,6 +19,7 @@
       }
       &:nth-child(2) {
         width: 70%;
+        margin-top: 160px;
         @include max(1100px) {
           width: 100%;
         }
@@ -53,26 +54,37 @@
       }
     }
     &-right {
-      padding-top: 160px;
       @include max(1100px) {
         padding-top: 60px;
       }
       @include max(600px) {
         padding-top: 0;
       }
-      &:nth-child(3) {
-        background: linear-gradient(
-          0deg,
-          #ffffff 6.74%,
-          #eff5ff 56.79%,
-          #ffffff 100%
-        );
+      &.about-info {
+        margin-bottom: 100px;
+      }
+      &.vision-mission {
+        margin-bottom: 100px;
+        & .history-inner-info {
+          margin-bottom: 95px;
+          h2 {
+            color: #002485;
+          }
+        }
+      }
+      &.commitment-quality {
+        & .history-inner-info {
+          h2 {
+            color: #002485;
+          }
+        }
       }
     }
 
     &-info {
+      margin-bottom: 50px;
       h2 {
-        font-size: 32px;
+        font-size: 28px;
         line-height: 38px;
         text-transform: uppercase;
         color: #3b80f3;
@@ -119,95 +131,77 @@
     &-slide img {
       padding-bottom: 30px;
     }
-    &-strategy {
+    &-list {
       @include flex();
       align-items: center;
-      border: 1px dashed;
-      border-left: transparent;
-      border-right: transparent;
-      @include max(600px) {
-        border: 0;
-        flex-direction: column-reverse;
-      }
-    }
-    &-text {
-      &:nth-child(1) {
-        width: 30%;
-        padding: 50px;
-        @include max(600px) {
-          padding: 0;
-          width: 100%;
-          padding-bottom: 20px;
-        }
-      }
-      &:nth-child(2) {
-        width: 70%;
-        border-left: 1px dashed;
-        @include max(600px) {
-          width: 100%;
-          border: 0;
-        }
-        .item-title {
-          font-size: 26px;
-          line-height: 28px;
-          text-transform: uppercase;
-          padding: 25px 40px;
-          color: #ff6600;
-          @include max(600px) {
-            padding-left: 0;
-            padding-top: 0;
-            font-size: 20px;
-          }
-        }
-        .item-text {
-          border-top: 1px dashed;
-          font-weight: 400;
-          font-size: 18px;
-          line-height: 28px;
-          padding: 68px 40px;
-          background-color: #fff;
-          @include max(600px) {
-            background-color: transparent;
-            padding: 0;
-            border: 0;
-            font-size: 14px;
-            padding-bottom: 20px;
-          }
-        }
-      }
-    }
-    &-introduce:nth-child(2) {
-      padding-top: 60px;
-      @include max(600px) {
-        padding-top: 30px;
-      }
-    }
-    &-introduce:nth-child(3) {
-      .history-inner-strategy {
-        border: transparent;
-        flex-direction: row-reverse;
-        @include max(600px) {
-          flex-direction: column-reverse;
-        }
-      }
-      .history-inner-text:nth-child(2) {
-        border-left: 0;
-        border-right: 1px dashed;
-      }
-      .history-inner-text .item-title {
-        color: #ff000a;
-        @include max(600px) {
-          padding-bottom: 20px;
-        }
-      }
-    }
-    &-introduce:nth-child(4) {
-      .history-inner-text {
-        &.item-title {
-          color: #00c86b;
-        }
+      margin-bottom: 40px;
+      & .history-introduce {
+        position: relative;
         &:nth-child(1) {
-          padding: 20px;
+          margin-right: 20px;
+        }
+        &:nth-child(2) {
+          margin-left: 20px;
+        }
+        & .history-strategy {
+          padding: 30px;
+          padding-top: 80px;
+          position: relative;
+          border-radius: 20px;
+          background: #fff;
+          & .history-text {
+            @include flex();
+            & .item-title {
+              margin-bottom: 14px;
+              h4 {
+                font-size: 18px;
+                color: #0060ff;
+                text-transform: uppercase;
+              }
+            }
+            & .item-img {
+              position: absolute;
+              top: -40px;
+              right: 25px;
+              img {
+                max-width: 140px;
+              }
+            }
+          }
+        }
+      }
+    }
+    &-strategy {
+      @include mid-flex-btw();
+      padding: 30px;
+      border-radius: 20px;
+      background: #fff;
+      & .history-inner-text {
+        & .item-title {
+          margin-bottom: 10px;
+          h4 {
+            font-size: 18px;
+            color: #0060ff;
+          }
+        }
+        & .item-text {
+          position: relative;
+          li {
+            position: relative;
+            padding-left: 20px;
+            &::before {
+              content: "";
+              width: 10px;
+              height: 10px;
+              display: block;
+              position: absolute;
+              left: 0;
+              top: 6px;
+              background-image: url(../assets/img/tuyendung/position-dot.svg);
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
+          }
         }
       }
     }
@@ -219,14 +213,81 @@
     }
     &-row {
       @include flex();
-      padding-top: 30px;
       @include max(600px) {
         flex-direction: column !important;
       }
+      &.border {
+        padding-top: 0;
+        & .history-time-form:nth-child(1) {
+          padding-top: 30px;
+        }
+        & .history-time-form:nth-child(2) {
+          padding-top: 30px;
+          &::before {
+            height: 100%;
+          }
+          &::after {
+            display: none;
+          }
+        }
+        &:nth-child(odd) {
+          flex-direction: row-reverse;
+          & .history-time-form:nth-child(2) {
+            width: 100%;
+            padding-right: 50px;
+            padding-left: 0;
+            &::before {
+              right: 0;
+              left: unset;
+            }
+          }
+          & div.history-time-year {
+            &::before {
+              left: 89px;
+              right: unset;
+            }
+            h3 {
+              left: 0;
+              right: unset;
+            }
+          }
+        }
+        &:nth-child(3) {
+          div.history-time-year::before {
+            background-color: #ffc107;
+          }
+        }
+        &:nth-child(4) {
+          div.history-time-year::before {
+            background-color: #428dff;
+          }
+        }
+        &:nth-child(6) {
+          div.history-time-year::before {
+            background-color: #428dff;
+          }
+        }
+        &:nth-child(7) {
+          div.history-time-year::before {
+            background-color: #ffc107;
+          }
+        }
+        &:nth-child(9) {
+          .history-time-form:nth-child(2) {
+            border-bottom: transparent;
+          }
+          & div.history-time-year {
+            &::before {
+              display: none;
+            }
+          }
+        }
+      }
     }
     &-form {
+      position: relative;
       &:nth-child(1) {
-        width: 10%;
+        width: 12%;
         @include max(600px) {
           width: 100%;
           @include flex();
@@ -234,29 +295,72 @@
         }
       }
       &:nth-child(2) {
-        width: 90%;
+        width: 88%;
         @include flex();
+        flex-wrap: wrap;
         padding-left: 50px;
-        padding-bottom: 50px;
-        border-bottom: 5px dotted #a9a9a9;
-        @include max(600px) {
-          width: 100%;
-          padding-top: 20px;
+        border-bottom: 2px dotted #a9a9a9;
+        &::before {
+          content: "";
+          height: 94%;
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          z-index: 1;
+          border-left: 2px dotted #a9a9a9;
+        }
+        &::after {
+          content: "";
+          width: 5%;
+          position: absolute;
+          top: 13px;
+          left: -14px;
+          border-top: 2px dotted #a9a9a9;
         }
         .history-time-build {
           width: 75%;
           padding-right: 30px;
+          margin-bottom: 70px;
         }
         .history-time-img {
           width: 25%;
+          margin-bottom: 70px;
+        }
+        .history-time-year {
+          h3 {
+            position: absolute;
+            bottom: -9px;
+            right: 0;
+            padding-left: 2px;
+            background: #fff;
+          }
+          &::before {
+            top: unset;
+            bottom: -8px;
+            right: 78px;
+            background: #00c86b;
+          }
         }
       }
     }
     &-year {
+      width: 100%;
+      &::before {
+        content: "";
+        width: 14px;
+        height: 14px;
+        top: 7px;
+        right: -8px;
+        z-index: 2;
+        position: absolute;
+        border-radius: 50%;
+        background-color: #69a1ff;
+      }
       h3 {
         font-size: 30px;
         color: #bababa;
-        font-weight: 400;
+        font-weight: 700;
+        line-height: 20px;
       }
       @include max(600px) {
         padding-bottom: 0;
@@ -275,22 +379,21 @@
       padding-bottom: 10px;
       text-transform: uppercase;
       p {
+        font-weight: 600;
         color: #0060ff;
       }
       @include max(425px) {
         font-size: 16px;
       }
     }
-    &-build {
-    }
   }
   &-commit {
-    .history-inner-info {
-      padding-bottom: 20px;
-    }
     &-box {
+      padding: 30px;
+      border-radius: 20px;
+      background: #dbeafe;
       @include mid-flex-btw();
-      padding-bottom: 30px;
+      margin-bottom: 40px;
       @include max(600px) {
         flex-direction: column;
       }
@@ -299,16 +402,6 @@
       padding-bottom: 150px;
       @include max(425px) {
         padding-bottom: 100px;
-      }
-    }
-    &-text:nth-child(1) {
-      width: 50%;
-      font-size: 18px;
-      line-height: 28px;
-      @include max(600px) {
-        width: 100%;
-        font-size: 14px;
-        padding-top: 0;
       }
     }
     &-text {
@@ -321,12 +414,25 @@
         font-weight: 400;
       }
       p {
+        font-size: 16px;
+        line-height: 24px;
         padding-bottom: 15px;
+      }
+      &:nth-child(1) {
+        width: 50%;
+        font-size: 18px;
+        line-height: 28px;
+        padding-right: 10px;
+        @include max(600px) {
+          width: 100%;
+          font-size: 14px;
+          padding-top: 0;
+        }
       }
     }
     &-img {
-      width: 40%;
-      padding-left: 60px;
+      width: 50%;
+      padding-left: 10px;
       @include max(600px) {
         padding-left: 0;
         width: 100%;
@@ -341,7 +447,8 @@
       }
       h3 {
         font-weight: 700;
-        color: #000;
+        color: #0060ff;
+        font-size: 18px;
         text-transform: uppercase;
         padding-bottom: 20px;
       }
