--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -169,6 +169,7 @@
             transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
             opacity: 1;
             visibility: visible;
+            z-index: 999;
             &.show {
               opacity: 1;
               visibility: visible;
