--- a/scss/layout/_position.scss
+++ b/scss/layout/_position.scss
@@ -301,9 +301,9 @@
       .detail-form {
         padding: 30px;
         background: #ffffff;
-        border: 1px solid #f7f7f7;
-        box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+        border: 1px solid #174ae6;
         border-radius: 10px;
+        box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
         > h3 {
           font-size: 28px;
           color: #2f281e;
