--- a/css/style.css
+++ b/css/style.css
@@ -1973,6 +1973,9 @@ table {
         position: fixed;
         bottom: 30px;
         right: 30px;
+        width: 100%;
+        height: auto;
+        max-width: 422px;
         transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
         opacity: 1;
         visibility: visible;
@@ -2968,9 +2971,9 @@ input::-webkit-input-placeholder {
   .detail-inner-box .detail-form {
     padding: 30px;
     background: #ffffff;
-    border: 1px solid #f7f7f7;
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
-    border-radius: 10px; }
+    border: 1px solid #174ae6;
+    border-radius: 10px;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2); }
     .detail-inner-box .detail-form > h3 {
       font-size: 28px;
       color: #2f281e;
@@ -4601,6 +4604,11 @@ input::-webkit-input-placeholder {
             font-size: 16px;
             margin-top: 8px;
             border: 0.8px solid #e8e8e8; }
+        .contact-inner .contact-row-col .contact-rapcha .captcha {
+          padding: 0 25px;
+          margin-bottom: 30px; }
+          .contact-inner .contact-row-col .contact-rapcha .captcha .iframe {
+            border-radius: 4px; }
         .contact-inner .contact-row-col .contact-send {
           padding: 25px;
           padding-top: 0;
@@ -4613,6 +4621,14 @@ input::-webkit-input-placeholder {
             padding: 10px 0;
             text-align: center;
             color: #fff;
+            border-radius: 4px;
+            background-color: #174ae6; }
+          .contact-inner .contact-row-col .contact-send input {
+            width: 100%;
+            padding: 10px 0;
+            text-align: center;
+            color: #fff;
+            border: 0;
             border-radius: 4px;
             background-color: #174ae6; }
 
